--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,7 @@ body, html {
 }
 
 #no-button {
-    background-color: #3498db; /* Blaue Farbe für den "Nein"-Button */
+    background-color: #e74c3c; /* Rote Farbe für den "Nein"-Button */
 }
 
 #no-button:hover {
