--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,5 +50,5 @@ body, html {
 }
 
 #no-button:hover {
-    background-color: #2980b9; /* Dunkleres Blau beim Hover */
+    background-color: #e74c3c; /* Dunkleres Blau beim Hover */
 }
